--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
     <div class="mx-auto w-75 p-5">
         <h1 class="text-center text-primary" style='font-size:50px; font-family: "Sedgwick Ave Display", cursive;'>Search with Lucene</h1>
 
-        <form action="sending" method="post">
+        <form action="results" method="post">
             <input type="text" name="query" class="form-control form-control-lg"/>
             <button type="submit" class="btn btn-primary btn-lg btn-block mt-2" >Szukaj</button>
         </form>
